# text-cleaning

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  run-denoising-finetuning.slurm copy.sh  run-denoising-finetuning.slurm.sh  run-denoising-gemma-cn-ff.slurm.sh  run-denoising-gemma-cn-ft.slurm.sh  run-denoising-gemma-cs-ff.slurm.sh  run-denoising-llama-cn-ft.slurm.sh  run-denoising-llama-cs-ff.slurm.sh  run-denoising-minerva-cn-ff.slurm.sh  run-denoising.slurm.sh
.devcontainer/: Dockerfile  devcontainer.json
data/plots/: aggregated_scores.json
data/statistical_analysis/: example_few_shot.json  statistical_mistake_analysis.txt  statistical_mistake_analysis_normalized_all.txt  statistical_mistake_analysis_verbose.txt
final_denoised/: AttentionSeekers-hw2_ocr-Llama-3.2-1B-Instruct_simple_context.json  the_vampyre_ocr_denoised_ClemensK-Llama-3.2-1B-Instruct-ocr-denoising-en-lora.json  the_vampyre_ocr_denoised_ClemensK-Llama-3.2-1B-Instruct-ocr-denoising-en.json  the_vampyre_ocr_denoised_google-gemma-3-1b-it-simple-context.json
final_submission/: AttentionSeekers-hw2_ocr-Llama-3.2-1B-Instruct.json  AttentionSeekers-hw2_ocr-gemma_3_1b_it.json  AttentionSeekers-hw2_ocr-lora_finetuned_gemma_3_1b_it.json
final_submission/judge_evaluations/:  AttentionSeekers-hw2_ocr-judge_completeness_fully_finetuned_Llama_3.2_1B_Instruct_Against_lora_finetuned_Llama_3.2_1B_Instruct.json   AttentionSeekers-hw2_ocr-judge_completeness_gemma_3_1b_it_Against_lora_finetuned_gemma_3_1b_it.json   AttentionSeekers-hw2_ocr-judge_faithfulness_fully_finetuned_Llama_3.2_1B_Instruct_Against_lora_finetuned_Llama_3.2_1B_Instruct.json   AttentionSeekers-hw2_ocr-judge_faithfulness_gemma_3_1b_it_Against_lora_finetuned_gemma_3_1b_it.json   AttentionSeekers-hw2_ocr-judge_fluency_fully_finetuned_Llama_3.2_1B_Instruct_Against_lora_finetuned_Llama_3.2_1B_Instruct.json   AttentionSeekers-hw2_ocr-judge_fluency_gemma_3_1b_it_Against_lora_finetuned_gemma_3_1b_it.json   AttentionSeekers-hw2_ocr-judge_no_hallucinations_fully_finetuned_Llama_3.2_1B_Instruct_Against_lora_finetuned_Llama_3.2_1B_Instruct.json  (+23 more)
src/text_cleaning/: constants.py  main.py  utils.py
text_cleaning/: constants.py  main.py  utils.py
(+93 files in other folders)
