[project]
name = "text-cleaning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.2.1",
    "transformers>=4.38.2",
    "accelerate>=0.27.2",
    "tqdm>=4.67.1",
    "levenshtein>=0.27.1",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]

[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
line-length = 120
